--- a/style.css
+++ b/style.css
@@ -46,5 +46,34 @@ a:hover{
     cursor:default;
 }
 #ham{
-    display: none;
+    display:none ;
+}
+.ham-menu{
+    position:relative;
+    display: inline-block;
+}
+.ham-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+.ham-icon span{
+    width: 100%;
+    height:2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+.m1-links{
+    position: absolute;
+    top: 100%;
+    right:0;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+
 }
